# todo-axum

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
reference/: spec.yaml
test/: requirements.txt  test_todo.py
test/lib/: api_config.py  utils.py
test/tests/: test_auth.py  test_create_user.py  test_delete_tasks.py  test_get_tasks.py  test_post_task.py  test_todo.py  test_update_task.py
todo/: Cargo.toml
todo/src/: domains.rs  main.rs
todo/src/jwt/: jwt.rs
