[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
openapi = {path = "../openapi_gen"}
validator = { version = "0.18.1", features = ["derive"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
